[gd_scene load_steps=20 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/level/floor_tileset.png" type="Texture" id=2]
[ext_resource path="res://level/MainLevel.gd" type="Script" id=3]
[ext_resource path="res://bosses/boss_hp.tscn" type="PackedScene" id=4]
[ext_resource path="res://level/InstructionsCanvasLayer.gd" type="Script" id=5]
[ext_resource path="res://level/Camera2D.gd" type="Script" id=6]
[ext_resource path="res://hud/instructions.tscn" type="PackedScene" id=7]
[ext_resource path="res://hud/hude.tscn" type="PackedScene" id=8]
[ext_resource path="res://hud/shop.tscn" type="PackedScene" id=9]
[ext_resource path="res://level/ShopCanvasLayer.gd" type="Script" id=10]
[ext_resource path="res://bosses/base/ludbase.tscn" type="PackedScene" id=11]
[ext_resource path="res://items/chest/chest_spawner.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/music/phase_one_loop.mp3" type="AudioStream" id=13]
[ext_resource path="res://assets/music/phase_two_loop.mp3" type="AudioStream" id=14]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 32, 0, 32, 0, 0, 32, 0 )

[sub_resource type="TileSet" id=1]
0/name = "floor_tileset.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "floor_tileset.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "floor_tileset.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "floor_tileset.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "floor_tileset.png 4"
4/texture = ExtResource( 2 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 32, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "floor_tileset.png 5"
5/texture = ExtResource( 2 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 32, 32, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "floor_tileset.png 6"
6/texture = ExtResource( 2 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 32, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "floor_tileset.png 7"
7/texture = ExtResource( 2 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 96, 32, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 3 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "floor_tileset.png 8"
8/texture = ExtResource( 2 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 64, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 4 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "floor_tileset.png 9"
9/texture = ExtResource( 2 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 96, 64, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 5 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0

[sub_resource type="Animation" id=6]
resource_name = "pan_to_boss"
tracks/0/type = "value"
tracks/0/path = NodePath("CutsceneCamera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 200 ), Vector2( 0, -20 ) ]
}

[node name="MainLevel" type="YSort"]
script = ExtResource( 3 )

[node name="FloorTileMap" type="TileMap" parent="." groups=["destroy_bullet", "destroy_enemy_bullet"]]
z_index = -10
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
collision_layer = 15
format = 1
tile_data = PoolIntArray( -458760, 1073741832, 0, -458759, -2147483639, 0, -458758, -2147483641, 0, -458757, -1610612729, 0, -458756, -1610612727, 0, -458755, -2147483641, 0, -458754, -2147483639, 0, -458753, -1610612727, 0, -524288, -2147483639, 0, -524287, -1610612729, 0, -524286, -2147483641, 0, -524285, -1610612729, 0, -524284, -2147483639, 0, -524283, -2147483641, 0, -524282, -1610612727, 0, -524281, 1610612744, 0, -393224, 7, 0, -393223, 6, 0, -393222, 3, 0, -393221, 2, 0, -393220, 1, 0, -393219, 0, 0, -393218, 5, 0, -393217, 0, 0, -458752, 0, 0, -458751, 1, 0, -458750, 0, 0, -458749, 2, 0, -458748, 4, 0, -458747, 3, 0, -458746, 0, 0, -458745, 1610612745, 0, -327688, 7, 0, -327687, 0, 0, -327686, 536870914, 0, -327685, 536870916, 0, -327684, 536870914, 0, -327683, 1, 0, -327682, 1, 0, -327681, 0, 0, -393216, 0, 0, -393215, 6, 0, -393214, 3, 0, -393213, 0, 0, -393212, 3, 0, -393211, 2, 0, -393210, 5, 0, -393209, 536870919, 0, -262152, 9, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 2, 0, -262147, 3, 0, -262146, 1, 0, -262145, 2, 0, -327680, 3, 0, -327679, 0, 0, -327678, 5, 0, -327677, 3, 0, -327676, 2, 0, -327675, 0, 0, -327674, 0, 0, -327673, 536870921, 0, -196616, 7, 0, -196615, 536870917, 0, -196614, 536870918, 0, -196613, 1, 0, -196612, 1, 0, -196611, 2, 0, -196610, 536870917, 0, -196609, 1, 0, -262144, 1, 0, -262143, 1, 0, -262142, 1, 0, -262141, 0, 0, -262140, 536870913, 0, -262139, 0, 0, -262138, 0, 0, -262137, 1610612745, 0, -131080, 9, 0, -131079, 536870916, 0, -131078, 536870916, 0, -131077, 1, 0, -131076, 0, 0, -131075, 0, 0, -131074, 536870913, 0, -131073, 0, 0, -196608, 0, 0, -196607, 3, 0, -196606, 536870916, 0, -196605, 1, 0, -196604, 0, 0, -196603, 1, 0, -196602, 1, 0, -196601, 1610612743, 0, -65544, 1073741831, 0, -65543, 536870915, 0, -65542, 0, 0, -65541, 1, 0, -65540, 536870916, 0, -65539, 6, 0, -65538, 2, 0, -65537, 536870916, 0, -131072, 1, 0, -131071, 536870916, 0, -131070, 2, 0, -131069, 536870914, 0, -131068, 536870917, 0, -131067, 536870915, 0, -131066, 2, 0, -131065, 536870919, 0, -8, 9, 0, -7, 1, 0, -6, 0, 0, -5, 2, 0, -4, 536870913, 0, -3, 0, 0, -2, 536870916, 0, -1, 0, 0, -65536, 536870916, 0, -65535, 3, 0, -65534, 536870916, 0, -65533, 0, 0, -65532, 536870913, 0, -65531, 536870913, 0, -65530, 0, 0, -65529, 1610612743, 0, 65528, 7, 0, 65529, 0, 0, 65530, 536870916, 0, 65531, 0, 0, 65532, 536870917, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 536870916, 0, 4, 3, 0, 5, 1, 0, 6, 6, 0, 7, 1610612743, 0, 131064, 9, 0, 131065, 0, 0, 131066, 536870914, 0, 131067, 0, 0, 131068, 2, 0, 131069, 3, 0, 131070, 3, 0, 131071, 536870916, 0, 65536, 3, 0, 65537, 5, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 536870915, 0, 65543, 536870919, 0, 196600, 1073741831, 0, 196601, 0, 0, 196602, 536870914, 0, 196603, 0, 0, 196604, 536870917, 0, 196605, 0, 0, 196606, 1, 0, 196607, 0, 0, 131072, 1, 0, 131073, 0, 0, 131074, 536870916, 0, 131075, 3, 0, 131076, 536870917, 0, 131077, 0, 0, 131078, 1, 0, 131079, 1610612743, 0, 262136, 9, 0, 262137, 0, 0, 262138, 536870917, 0, 262139, 0, 0, 262140, 2, 0, 262141, 1, 0, 262142, 1, 0, 262143, 536870915, 0, 196608, 1, 0, 196609, 536870913, 0, 196610, 2, 0, 196611, 536870918, 0, 196612, 0, 0, 196613, 536870916, 0, 196614, 536870915, 0, 196615, 536870921, 0, 327672, 7, 0, 327673, 0, 0, 327674, 0, 0, 327675, 3, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 536870918, 0, 262144, 536870914, 0, 262145, 1, 0, 262146, 3, 0, 262147, 2, 0, 262148, 0, 0, 262149, 1, 0, 262150, 3, 0, 262151, 1610612745, 0, 393208, 1073741831, 0, 393209, 536870913, 0, 393210, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 536870916, 0, 393214, 536870913, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 1, 0, 327685, 536870915, 0, 327686, 1, 0, 327687, 1610612743, 0, 458744, 9, 0, 458745, 0, 0, 458746, 4, 0, 458747, 1, 0, 458748, 0, 0, 458749, 5, 0, 458750, 0, 0, 458751, 1, 0, 393216, 3, 0, 393217, 0, 0, 393218, 2, 0, 393219, 1, 0, 393220, 4, 0, 393221, 0, 0, 393222, 0, 0, 393223, 536870921, 0, 524280, 8, 0, 524281, -536870903, 0, 524282, -536870905, 0, 524283, -536870905, 0, 524284, -536870903, 0, 524285, -536870903, 0, 524286, -536870905, 0, 524287, -536870905, 0, 458752, -536870903, 0, 458753, -536870905, 0, 458754, -536870903, 0, 458755, -536870905, 0, 458756, -536870903, 0, 458757, -536870903, 0, 458758, -536870905, 0, 458759, 536870920, 0 )

[node name="LudBase" parent="." instance=ExtResource( 11 )]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 200 )

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2( 0.5, 0.5 )
limit_left = -256
limit_top = -256
limit_right = 256
limit_bottom = 256
script = ExtResource( 6 )

[node name="ShopCanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 10 )

[node name="Shop" parent="ShopCanvasLayer" instance=ExtResource( 9 )]
pause_mode = 2

[node name="InstructionsCanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
visible = false
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )
script = ExtResource( 5 )

[node name="Instructions" parent="InstructionsCanvasLayer" instance=ExtResource( 7 )]
pause_mode = 2

[node name="HUDCanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false
scale = Vector2( 2, 2 )
transform = Transform2D( 2, 0, 0, 2, 0, 0 )

[node name="HUD" parent="HUDCanvasLayer" instance=ExtResource( 8 )]
z_index = 10

[node name="BossHP" parent="HUDCanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 0, 160 )

[node name="ChestSpawner" parent="." instance=ExtResource( 12 )]

[node name="CutsceneCamera" type="Camera2D" parent="."]
position = Vector2( 0, 200 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = -256
limit_top = -256
limit_right = 256
limit_bottom = 256

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pan_to_boss = SubResource( 6 )

[node name="P1AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "Music"

[node name="P2AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
